WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75976
[BlackBerry] Fix assertion failure in BackingStore::blitContents
https://bugs.webkit.org/show_bug.cgi?id=75976
Summary
[BlackBerry] Fix assertion failure in BackingStore::blitContents
Mike Lattanzio
Reported
2012-01-10 11:15:45 PST
Check the srcRect of the transformation matrix is non-empty before calling rectToRect.
Attachments
Check contents size before creating transformation matrix.
(2.50 KB, patch)
2012-01-10 11:22 PST
,
Mike Lattanzio
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Lattanzio
Comment 1
2012-01-10 11:22:06 PST
Created
attachment 121875
[details]
Check contents size before creating transformation matrix.
WebKit Review Bot
Comment 2
2012-01-10 11:38:24 PST
Comment on
attachment 121875
[details]
Check contents size before creating transformation matrix. Clearing flags on attachment: 121875 Committed
r104605
: <
http://trac.webkit.org/changeset/104605
>
WebKit Review Bot
Comment 3
2012-01-10 11:38:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug