[BlackBerry] Fix assertion failure in BackingStore::blitContents https://bugs.webkit.org/show_bug.cgi?id=75976

Prevent an assertion failure in BackingStore::blitContents by
checking that the srcRect of the transformation matrix is non empty.

Patch by Mike Lattanzio <mlattanzio@rim.com> on 2012-01-10
Reviewed by Adam Treat.

Upstream BlackBerry port is not yet building and testable.

* blackberry/Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::blitContents):

Canonical link: https://commits.webkit.org/92783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104605 268f45cc-cd09-0410-ab3c-d52691b4dbfc